--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,6 +4,6 @@
   color: rgb(255, 187, 0);
   /* height: 1080px; */
   /* width: 1920px; */
-  display: flex;
+  /* display: flex; */
   justify-content: center;
 }
